--- a/ramp_parameters/fn_saw.ini
+++ b/ramp_parameters/fn_saw.ini
@@ -1,5 +1,5 @@
 [setup]
-frac_num = 1275068.416	; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 671088	; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
 
 [ramp0]
 period = 655.35   		; modulation period 	[us]
@@ -10,17 +10,17 @@ reset = 1				; reset ramp
 doubler = 0		
 
 [ramp1]
-period = 327.68     	; modulation period 	[us]
-bandwidth = -100e6	    ; modulation bandwidth 	[Hz]
+period = 167.12     	; modulation period 	[us]
+bandwidth = -99e6	    ; modulation bandwidth 	[Hz]
 next = 2				; next ramp
-trigger = 0				; next ramp trigger 		
+trigger = 0				; next ramp trigger 				
 reset = 1				; reset ramp									 	  
 doubler = 0		
 
 [ramp2]
-period = 327.68 		; modulation period 	[us]
-bandwidth = 100e6		; modulation bandwidth 	[Hz]
+period = 324.40 		; modulation period 	[us]
+bandwidth = 99e6		; modulation bandwidth 	[Hz]
 next = 1				; next ramp
-trigger = 0				; next ramp trigger 			
+trigger = 0				; next ramp trigger 				
 reset = 0				; reset ramp
 doubler = 0	
