changed period to length, improved ramp_calculator, created beatToTime function

--- a/ramp_parameters/fn_saw.ini
+++ b/ramp_parameters/fn_saw.ini
@@ -1,26 +1,26 @@
 [setup]
-frac_num = 671088	; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 671089		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
 
 [ramp0]
-length = 65535   		; ramp length in number of cycles (100 MHz)
+length = 65535   		; modulation period 	[us]
 bandwidth = 0			; modulation bandwidth 	[Hz]
-next = 2				; next ramp number
-trigger = 1				; trigger for next ramp (0, 1, 2 or 3)
-reset = 1				; toggle ramp reset 
-doubler = 0				; toggle ramp length doubler 
+next = 2				; next ramp
+trigger = 1				; next ramp trigger 	(0, 1, 2 or 3)
+reset = 1				; reset ramp
+doubler = 0		
 
 [ramp1]
-length = 16384     	
-bandwidth = -100e6	   
-next = 2				
-trigger = 0								
-reset = 1												 	  
+length = 8704	     	; modulation period 	[us]
+bandwidth = -98.4375e6	    ; modulation bandwidth 	[Hz]
+next = 2				; next ramp
+trigger = 0				; next ramp trigger 		
+reset = 1				; reset ramp									 	  
 doubler = 0		
 
 [ramp2]
-length = 32768 		
-bandwidth = 100e6		
-next = 1				
-trigger = 0				 				
-reset = 0				
+length = 32256 			; modulation period 	[us]
+bandwidth = 98.4375e6		; modulation bandwidth 	[Hz]
+next = 1				; next ramp
+trigger = 0				; next ramp trigger 			
+reset = 0				; reset ramp
 doubler = 0	
