--- a/ramp_parameters/d_saw.ini
+++ b/ramp_parameters/d_saw.ini
@@ -2,39 +2,35 @@
 frac_num = 0
 
 [ramp0]
-period = 655.35   		; modulation period 	[us]
+length = 65535   		; modulation period 	[us]
 bandwidth = 0			; modulation bandwidth 	[Hz]
 next = 3				; next ramp
-trigger = 1				; next ramp trigger 				(0, 1, 2 or 3)
+trigger = 1				; next ramp trigger 				
 reset = 1				; reset ramp
-flag = 0
 doubler = 0		
 
 [ramp1]
-period = 81.92	     	; modulation period 	[us]
-bandwidth = -100e6	    ; modulation bandwidth 	[Hz]
+length = 16384	     	; modulation period 	[us]
+bandwidth = -150e6	    ; modulation bandwidth 	[Hz]
 next = 2				; next ramp
-trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
+trigger = 0				; next ramp trigger 				
 reset = 1				; reset ramp									 	  
-flag = 0
 doubler = 0		
 
 [ramp2]
-period = 327.68 		; modulation period 	[us]
-bandwidth = 100e6		; modulation bandwidth 	[Hz]
+length = 49152 			; modulation period 	[us]
+bandwidth = 150e6		; modulation bandwidth 	[Hz]
 next = 1				; next ramp
-trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
+trigger = 0				; next ramp trigger 				
 reset = 0				; reset ramp
-flag = 0
-doubler = 0		
+doubler = 1		
 
 [ramp3]
-period = 6.22 	 		; modulation period 	[us]
+length = 655 	 		; modulation period 	[us]
 bandwidth = 0		   	; modulation bandwidth 	[Hz]
 next = 2				; next ramp
-trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
+trigger = 0				; next ramp trigger 				
 reset = 1				; reset ramp
-flag = 0
 doubler = 0		
 
-; 6.22 us = 1.9 MHz
+
