--- a/ramp_parameters/saw.ini
+++ b/ramp_parameters/saw.ini
@@ -2,25 +2,25 @@
 frac_num = 0
 
 [ramp0]
-length = 65535   		; ramp length in number of cycles (100 MHz)
+length = 65535   		; modulation period 	[us]
 bandwidth = 0			; modulation bandwidth 	[Hz]
-next = 2				; next ramp number
-trigger = 1				; trigger for next ramp (0, 1, 2 or 3)
-reset = 1				; toggle ramp reset 
-doubler = 0				; toggle ramp length doubler 
+next = 2				; next ramp
+trigger = 1				; next ramp trigger 				
+reset = 1				; reset ramp
+doubler = 0		
 
 [ramp1]
-length = 16384     	
-bandwidth = -100e6	   
-next = 2				
-trigger = 0								
-reset = 1												 	  
+length = 16384	     	; modulation period 	[us]
+bandwidth = -150e6	    ; modulation bandwidth 	[Hz]
+next = 2				; next ramp
+trigger = 0				; next ramp trigger 				
+reset = 1				; reset ramp									 	  
 doubler = 0		
 
 [ramp2]
-length = 32768 		
-bandwidth = 100e6		
-next = 1				
-trigger = 0				 				
-reset = 0				
-doubler = 0	
+length = 49152 			; modulation period 	[us]
+bandwidth = 150e6		; modulation bandwidth 	[Hz]
+next = 1				; next ramp
+trigger = 0				; next ramp trigger 				
+reset = 0				; reset ramp
+doubler = 1	
