updated ramp files

--- a/ramps/saw.ini
+++ b/ramps/saw.ini
@@ -1,26 +1,26 @@
 [setup]
-frac_num = 0
+frac_num = 671089
 
 [ramp0]
-length = 65535   		; modulation period 	[us]
-bandwidth = 0			; modulation bandwidth 	[Hz]
+length = 65535   		; cycles of phase detector frequency
+bandwidth = 0			; modulation bandwidth [Hz]
 next = 2				; next ramp
-trigger = 1				; next ramp trigger 				
-reset = 1				; reset ramp
-doubler = 0		
+trigger = 1				; trigger for next ramp 				
+reset = 1				; reset accumulator when complete
+doubler = 0				; double ramp length
 
 [ramp1]
-length = 16384	     	; modulation period 	[us]
-bandwidth = -150e6	    ; modulation bandwidth 	[Hz]
-next = 2				; next ramp
-trigger = 0				; next ramp trigger 				
-reset = 1				; reset ramp									 	  
+length = 16384	     	
+bandwidth = -100e6	    
+next = 2				
+trigger = 0								
+reset = 1											 	  
 doubler = 0		
 
 [ramp2]
-length = 49152 			; modulation period 	[us]
-bandwidth = 150e6		; modulation bandwidth 	[Hz]
-next = 1				; next ramp
-trigger = 0				; next ramp trigger 				
-reset = 0				; reset ramp
-doubler = 0	
+length = 32768 			
+bandwidth = 100e6		
+next = 1				
+trigger = 0								
+reset = 0				
+doubler = 0		
