--- a/ramps/saw_fn.ini
+++ b/ramps/saw_fn.ini
@@ -1,13 +1,13 @@
 [setup]
-frac_num = 671089		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 2013266		; 671088 = 1.0 MHz ; 1610613 = 2.4 MHz ; 2013266 = 3 MHz; 2281701 = 3.4 MHz ; 2617246 = 3.9 MHz        
 
 [ramp0]
-length = 65535   		; cycles of phase detector frequency
+length = 32768   		; cycles of phase detector (100MHz)
 bandwidth = 0			; modulation bandwidth [Hz]
-next = 2				; next ramp
-trigger = 1				; trigger for next ramp 				
+next = 2				; next ramp number
+trigger = 1				; wait for trigger before next ramp 				
 reset = 1				; reset accumulator when complete
-doubler = 0				; double ramp length
+doubler = 0				; double phase detector cycles
 
 [ramp1]
 length = 16384	     	
@@ -18,7 +18,7 @@ reset = 1
 doubler = 0		
 
 [ramp2]
-length = 32768 			
+length = 16384 			
 bandwidth = 100e6		
 next = 1				
 trigger = 0								
