--- a/ramps/tri_fn.ini
+++ b/ramps/tri_fn.ini
@@ -1,30 +1,26 @@
 [setup]
-frac_num = 1275068.416	; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 5898240		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
 
 [ramp0]
-period = 655.35   		; modulation period 	[us]
-bandwidth = 0			; modulation bandwidth 	[Hz]
-next = 2				; next ramp
-trigger = 1				; next ramp trigger 				(0, 1, 2 or 3)
-reset = 1				; reset ramp
-flag = 0
-doubler = 0		
+length = 32768   		; cycles of phase detector (100MHz)
+bandwidth = 0			; modulation bandwidth [Hz]
+next = 2				; next ramp number
+trigger = 1				; wait for trigger before next ramp 	
+reset = 1				; reset accumulator when complete
+doubler = 0				; double phase detector cycles
 
 [ramp1]
-period = 327.68     	; modulation period 	[us]
-bandwidth = -100e6	    ; modulation bandwidth 	[Hz]
-next = 2				; next ramp
-trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
-reset = 1				; reset ramp									 	  
-flag = 0
+length = 32768     
+bandwidth = -100e6	
+next = 2				
+trigger = 0		
+reset = 1											 	  
 doubler = 0		
 
 [ramp2]
-period = 327.68 		; modulation period 	[us]
-bandwidth = 100e6		; modulation bandwidth 	[Hz]
-next = 1				; next ramp
-trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
-reset = 0				; reset ramp
-flag = 0
+length = 32768 		
+bandwidth = 100e6		
+next = 1				
+trigger = 0				
+reset = 0				
 doubler = 0	
-
