--- a/ramps/v1.0/fn_flat.ini
+++ b/ramps/v1.0/fn_flat.ini
@@ -1,7 +1,11 @@
+; 1 kHz = 671.008864
+; 1 MHz = 671088.64
+
 [setup]
-frac_num = 671088.64	; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 671088.64
 
 [ramp0]
+number = 0       		; ramp number
 period = 655.35   		; modulation period 	[us]
 bandwidth = 0			; modulation bandwidth 	[Hz]
 next = 4				; next ramp
@@ -11,6 +15,7 @@ flag = 0
 doubler = 0		
 
 [ramp1]
+number = 1       		; ramp number
 period = 327.68     	; modulation period 	[us]
 bandwidth = -100e6	    ; modulation bandwidth 	[Hz]
 next = 4				; next ramp
@@ -20,6 +25,7 @@ flag = 0
 doubler = 0		
 
 [ramp2]
+number = 2       		; ramp number
 period = 327.68	 		; modulation period 	[us]
 bandwidth = 0			; modulation bandwidth 	[Hz]
 next = 1				; next ramp
@@ -29,6 +35,7 @@ flag = 0
 doubler = 0		
 
 [ramp3]
+number = 3       		; ramp number
 period = 327.68 	 	; modulation period 	[us]
 bandwidth = 100e6	   	; modulation bandwidth 	[Hz]
 next = 2				; next ramp
@@ -38,10 +45,41 @@ flag = 0
 doubler = 0		
 
 [ramp4]
+number = 4       		; ramp number
 period = 327.68    	  	; modulation period 	[us]
 bandwidth = 0   		; modulation bandwidth 	[Hz]
 next = 1				; next ramp
 trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
 reset = 1				; reset ramp
 flag = 0
-doubler = 0	
+doubler = 0		
+
+[ramp5]
+number = 5       		; ramp number
+period = 50     		; modulation period 	[us]
+bandwidth = 0   		; modulation bandwidth 	[Hz]
+next = 1				; next ramp
+trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
+reset = 0				; reset ramp
+flag = 0
+doubler = 0		
+
+[ramp6]
+number = 6       		; ramp number
+period = 50     		; modulation period 	[us]
+bandwidth = 0   		; modulation bandwidth 	[Hz]
+next = 1				; next ramp
+trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
+reset = 0				; reset ramp
+flag = 0
+doubler = 0		
+
+[ramp7]
+number = 7       		; ramp number
+period = 50 	   		; modulation period 	[us]
+bandwidth = 0   		; modulation bandwidth 	[Hz]
+next = 1				; next ramp
+trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
+reset = 0				; reset ramp
+flag = 0
+doubler = 0		
