--- a/ramps/v2.0/d_saw.ini
+++ b/ramps/v2.0/d_saw.ini
@@ -11,7 +11,7 @@ flag = 0
 doubler = 0		
 
 [ramp1]
-period = 32768     	; modulation period 	[us]
+period = 81.92	     	; modulation period 	[us]
 bandwidth = -100e6	    ; modulation bandwidth 	[Hz]
 next = 2				; next ramp
 trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
@@ -20,7 +20,7 @@ flag = 0
 doubler = 0		
 
 [ramp2]
-period = 32768 		; modulation period 	[us]
+period = 327.68 		; modulation period 	[us]
 bandwidth = 100e6		; modulation bandwidth 	[Hz]
 next = 1				; next ramp
 trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
@@ -29,7 +29,7 @@ flag = 0
 doubler = 0		
 
 [ramp3]
-period = 5.00 	 		; modulation period 	[us]
+period = 6.22 	 		; modulation period 	[us]
 bandwidth = 0		   	; modulation bandwidth 	[Hz]
 next = 2				; next ramp
 trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
@@ -37,3 +37,4 @@ reset = 1				; reset ramp
 flag = 0
 doubler = 0		
 
+; 6.22 us = 1.9 MHz
