--- a/ramps/v2.0/fn_tri.ini
+++ b/ramps/v2.0/fn_tri.ini
@@ -1,17 +1,17 @@
 [setup]
-frac_num = 0
+frac_num = 1275068.416	; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
 
 [ramp0]
 period = 655.35   		; modulation period 	[us]
 bandwidth = 0			; modulation bandwidth 	[Hz]
-next = 3				; next ramp
+next = 2				; next ramp
 trigger = 1				; next ramp trigger 				(0, 1, 2 or 3)
 reset = 1				; reset ramp
 flag = 0
 doubler = 0		
 
 [ramp1]
-period = 32768     	; modulation period 	[us]
+period = 327.68     	; modulation period 	[us]
 bandwidth = -100e6	    ; modulation bandwidth 	[Hz]
 next = 2				; next ramp
 trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
@@ -20,20 +20,11 @@ flag = 0
 doubler = 0		
 
 [ramp2]
-period = 32768 		; modulation period 	[us]
+period = 327.68 		; modulation period 	[us]
 bandwidth = 100e6		; modulation bandwidth 	[Hz]
 next = 1				; next ramp
 trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
 reset = 0				; reset ramp
 flag = 0
-doubler = 0		
-
-[ramp3]
-period = 5.00 	 		; modulation period 	[us]
-bandwidth = 0		   	; modulation bandwidth 	[Hz]
-next = 2				; next ramp
-trigger = 0				; next ramp trigger 				(0, 1, 2 or 3)
-reset = 1				; reset ramp
-flag = 0
-doubler = 0		
+doubler = 0	
 
