--- a/ramps/v3.0/long.ini
+++ b/ramps/v3.0/long.ini
@@ -5,14 +5,14 @@ frac_num = 0
 length = 32768   		; cycles of phase detector (100MHz)
 bandwidth = 0			; modulation bandwidth [Hz]
 next = 3				; next ramp number
-trigger = 1				; wait for trigger before next ramp			
+trigger = 1				; wait for trigger before next ramp 				
 reset = 1				; reset accumulator when complete
 doubler = 0				; double phase detector cycles
 
 [ramp1]
 length = 16384	     	
 bandwidth = -100e6	    
-next = 2				
+next = 3				
 trigger = 0								
 reset = 1											 	  
 doubler = 0		
@@ -23,12 +23,12 @@ bandwidth = 100e6
 next = 1				
 trigger = 0								
 reset = 0				
-doubler = 0		
+doubler = 0	
 
 [ramp3]
-length = 128 	 		
-bandwidth = 0		   	
+length = 32768 			
+bandwidth = 50e6		
 next = 2				
-trigger = 0							
-reset = 1				
-doubler = 0		
+trigger = 0								
+reset = 0				
+doubler = 0	
