--- a/ramps/v3.0/saw_fn.ini
+++ b/ramps/v3.0/saw_fn.ini
@@ -1,11 +1,11 @@
 [setup]
-frac_num = 0
+frac_num = 5898240		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416		; 5898240 = 8.789 MHz
 
 [ramp0]
 length = 32768   		; cycles of phase detector (100MHz)
 bandwidth = 0			; modulation bandwidth [Hz]
-next = 3				; next ramp number
-trigger = 1				; wait for trigger before next ramp			
+next = 2				; next ramp number
+trigger = 1				; wait for trigger before next ramp 				
 reset = 1				; reset accumulator when complete
 doubler = 0				; double phase detector cycles
 
@@ -23,12 +23,4 @@ bandwidth = 100e6
 next = 1				
 trigger = 0								
 reset = 0				
-doubler = 0		
-
-[ramp3]
-length = 128 	 		
-bandwidth = 0		   	
-next = 2				
-trigger = 0							
-reset = 1				
-doubler = 0		
+doubler = 0	
