updated ramps and template

--- a/ramps/asym_fn.ini
+++ b/ramps/asym_fn.ini
@@ -1,34 +1,26 @@
 [setup]
-frac_num = 0
+frac_num = 5578424		; 268435 = 0.4 MHz | 671088 = 1.0 MHz | 1610613 = 2.4 MHz | 2013266 = 3 MHz | 2281701 = 3.4 MHz | 2617246 = 3.9 MHz |       
 
 [ramp0]
 length = 32768   		; cycles of phase detector (100MHz)
 bandwidth = 0			; modulation bandwidth [Hz]
-next = 3				; next ramp number
-trigger = 1				; wait for trigger before next ramp			
+next = 1				; next ramp number
+trigger = 1				; wait for trigger before next ramp 				
 reset = 1				; reset accumulator when complete
 doubler = 0				; double phase detector cycles
 
 [ramp1]
-length = 16384	     	
-bandwidth = -100e6	    
+length = 17050	     	
+increment = -1888	    
 next = 2				
 trigger = 0								
 reset = 1											 	  
 doubler = 0		
 
 [ramp2]
-length = 32768 			
-bandwidth = 100e6		
+length = 15718 			
+increment = 2048		
 next = 1				
 trigger = 0								
 reset = 0				
-doubler = 0		
-
-[ramp3]
-length = 128 	 		
-bandwidth = 0		   	
-next = 2				
-trigger = 0							
-reset = 1				
-doubler = 0		
+doubler = 0	
