--- a/ramps/saw_fn.ini
+++ b/ramps/saw_fn.ini
@@ -1,5 +1,5 @@
 [setup]
-frac_num = 2013266		; 671088 = 1.0 MHz ; 1610613 = 2.4 MHz ; 2013266 = 3 MHz; 2281701 = 3.4 MHz ; 2617246 = 3.9 MHz        
+frac_num = 5578424		; 268435 = 0.4 MHz | 671088 = 1.0 MHz | 1610613 = 2.4 MHz | 2013266 = 3 MHz | 2281701 = 3.4 MHz | 2617246 = 3.9 MHz |       
 
 [ramp0]
 length = 32768   		; cycles of phase detector (100MHz)
@@ -18,7 +18,7 @@ reset = 1
 doubler = 0		
 
 [ramp2]
-length = 16384 			
+length = 32768 			
 bandwidth = 100e6		
 next = 1				
 trigger = 0								
