--- a/ramps/tri_fn.ini
+++ b/ramps/tri_fn.ini
@@ -1,26 +1,26 @@
 [setup]
-frac_num = 5898240		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 5578424		; 268435 = 0.4 MHz | 671088 = 1.0 MHz | 1610613 = 2.4 MHz | 2013266 = 3 MHz | 2281701 = 3.4 MHz | 2617246 = 3.9 MHz |       
 
 [ramp0]
 length = 32768   		; cycles of phase detector (100MHz)
 bandwidth = 0			; modulation bandwidth [Hz]
-next = 2				; next ramp number
-trigger = 1				; wait for trigger before next ramp 	
+next = 1				; next ramp number
+trigger = 1				; wait for trigger before next ramp 				
 reset = 1				; reset accumulator when complete
 doubler = 0				; double phase detector cycles
 
 [ramp1]
-length = 32768     
-bandwidth = -100e6	
+length = 16384	     	
+bandwidth = -100e6	    
 next = 2				
-trigger = 0		
+trigger = 0								
 reset = 1											 	  
 doubler = 0		
 
 [ramp2]
-length = 32768 		
+length = 16384 			
 bandwidth = 100e6		
 next = 1				
-trigger = 0				
+trigger = 0								
 reset = 0				
 doubler = 0	
